@@ -645,6 +645,10 @@ function Tabs() //{{{
             { argCount: "0" });
     }
 
+    completion.addUrlCompleter("t",
+        "Open tabs",
+        completion.buffer);
+
     /////////////////////////////////////////////////////////////////////////////}}}
     ////////////////////// PUBLIC SECTION //////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////{{{
